k8s-config/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: myweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-init-config
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-init-config
          configMap:
            name: mysql-init
---
  apiVersion: v1
  kind: Service
  metadata:
    name: mysql-service
  spec:
    selector:
      app: mysql
    ports:
      - protocol: TCP
        port: 3306
        targetPort: 3306
