k8s-config/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: myweb
  labels:
    app: api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: mydistributedapi.myvnc.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myweb-backend-service
              port:
                number: 5000
    - host: mydistributedweb.myvnc.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myweb-frontend-service
              port:
                number: 8080
